# pp-pk-service-expe

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.json
.claude/skills/: CONVENTIONS.md  README.md
.codex/skills/: CONVENTIONS.md  README.md
.github/skills/: CONVENTIONS.md  README.md
.sdd/: settings.json
docs/: PPPK.xlsx  README.md  agent-dag.drawio  domain.md  evaluation.md  examples.md  implementation.md  index.md  pipeline.md  sme_stage_cases.csv  sme_stage_cases.csv.20260619-200051.bak
docs/00-overview/: glossary.md  problem-statement.md
docs/01-current-system/: legacy-architecture.md  pain-points.md
docs/02-domain-inputs/: api-reference.md  csv-catalog.md  field-taxonomy.md  machine-query-schema.md
docs/03-proposed-design/: architecture.md  grounding-and-tool-calling.md  misspelling-strategy.md  stage-1-decomposition.md  (+2 more)
inputs/: document_year.csv  dose_type.csv  drugs.csv  effects.csv  enums.csv  fields.csv  indications.csv  query_criteria_fields.csv  route.csv  sme_expected_cases.csv  sources.csv  species.csv  toxicity_parameters.csv
memory/: MEMORY.md  enhancer-annotations-must-flow-downstream.md  fix-bugs-at-the-stage-that-causes-them.md  llm-determinism-and-type-routing.md  stage2-grounding-bug-classes.md
specs/: constitution.md  evaluation.md  git.md  plan.md  product.md  requirements.md  skeleton.md  tasks.md  technical.md
tests/: test_eval.py  test_normalize.py  test_per_step_eval.py  test_pipeline.py  test_services.py  test_stages.py  test_taxonomy.py
utils/: build_sme_stage_cases.py  fill_stage_cases_from_pipeline.py
(+82 files in other folders)
